fix(Table): 去掉设置 border-spacing的部分

--- a/components/Table/styles/index.less
+++ b/components/Table/styles/index.less
@@ -164,8 +164,3 @@ table.nom-table {
     border: 1px solid gainsboro;
   }
 }
-
-.nom-app table {
-  border-spacing: 0;
-  border-collapse: separate;
-}
